# esp32_IoT_cloud_device_firmware

./: CMakeLists.txt  partitions.csv  readme.md  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  WiFi_callbacks.c  config.h  credentials.h  hardware_config.h  hardware_layer.c  hardware_layer.h  http_server.c  http_server.h  interrupts.c  interrupts.h  lcd_driver.c  lcd_driver.h  leds_driver.c  leds_driver.h  main.c  main.h  mqtt_callbacks.c  mqtt_callbacks.h  mqtt_manager.c  mqtt_manager.h  nvs_memory.c  nvs_memory.h  util.c  util.h  web_application.c  web_application.h  wifi_callbacks.h  wifi_manager.c  wifi_manager.h
spiffs/: index.html  script.js  style.css
